# GoodsManagementSystem-Rust

./: .gitignore  Cargo.toml  README.md  goods-management-system-rust-22fa72197ce61797.js  goods-management-system-rust-22fa72197ce61797_bg.wasm  goods-management-system-rust-31508b193266ffce.js  goods-management-system-rust-31508b193266ffce_bg.wasm  goods-management-system-rust-4015ace9b7b0ca7d.js  goods-management-system-rust-4015ace9b7b0ca7d_bg.wasm  goods-management-system-rust-788f3242a0813b6c.js  goods-management-system-rust-788f3242a0813b6c_bg.wasm  goods-management-system-rust-7b4a8b96bccc0f1b.js  goods-management-system-rust-7b4a8b96bccc0f1b_bg.wasm  goods-management-system-rust-836928d49a5f21ee.js  goods-management-system-rust-836928d49a5f21ee_bg.wasm  goods-management-system-rust-aa2b40279e2931a2.js  goods-management-system-rust-aa2b40279e2931a2_bg.wasm  goods-management-system-rust-afe145c3aef83b26.js  goods-management-system-rust-afe145c3aef83b26_bg.wasm  goods-management-system-rust-cbb8e0ace59f1947.js  goods-management-system-rust-cbb8e0ace59f1947_bg.wasm  goods-management-system-rust-cd8996aad676adc7.js  goods-management-system-rust-cd8996aad676adc7_bg.wasm  goods-management-system-rust-db19169e49e6d5bc.js  goods-management-system-rust-db19169e49e6d5bc_bg.wasm  goods-management-system-rust-def1a87a8e1151a1.js  goods-management-system-rust-def1a87a8e1151a1_bg.wasm  goods-management-system-rust-e5822b34d7fe60bf.js  goods-management-system-rust-e5822b34d7fe60bf_bg.wasm  goods-management-system-rust-eb1b5d45d3305b02.js  goods-management-system-rust-eb1b5d45d3305b02_bg.wasm  index-1110f2c30b5a5a2c.js  index-8bbc345f2472920b.css  index-94f493db734fef77.css  index-b2b5394f21359d74.css  index-c083028306eedfee.js  index-d4e53211aade588.css  index-eb8cc665e301f1ee.css  (+7 more)
(+13 files in other folders)
