[package]
name = "goods-management-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/firestore",
    "packages/firestore_hooks",
    "packages/model"
]

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
material-yew = { version="0.3" , features = ["full"] }
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = "0.2.76"
firestore = { path = "packages/firestore" }
firestore_hooks = { path = "packages/firestore_hooks" }
model = { path = "packages/model" }
